--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.536.0",
     "mongoose": "^8.17.1",
+    "motion": "^12.23.12",
     "next": "15.4.5",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
