--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
+    "html2pdf.js": "^0.14.0",
     "lucide-react": "^0.536.0",
     "mongoose": "^8.17.1",
     "motion": "^12.23.12",
@@ -27,6 +28,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "react-to-print": "^3.2.0",
     "resend": "^6.6.0",
     "tailwind-merge": "^3.3.1"
   },
